// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CE style attrs injection > codegen > w/ <script setup> 1`] = `
"import { useCEStyleAttrs as _useCEStyleAttrs, unref as _unref } from 'vue'
const msg = 'red'
export default {
  setup(__props, { expose: __expose }) {
  __expose();

_useCEStyleAttrs(_ctx => ([
  {
   "id": { id: _ctx.msg3, 'other-attr': msg },
   "src": msg,
   [msg]: msg,
   "xlink:special": msg,
 },
]))

return { msg }
}

}"
`;

exports[`CE style attrs injection > codegen > w/ <script setup> using the same var multiple times 1`] = `
"import { useCEStyleAttrs as _useCEStyleAttrs, unref as _unref } from 'vue'
const msg = 'red'
        
export default {
  setup(__props, { expose: __expose }) {
  __expose();

_useCEStyleAttrs(_ctx => ([
  {
   "id": { id: _ctx.msg3, 'other-attr': msg },
 },
]))

        
return { msg }
}

}"
`;
